force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Barcode_Setting__mdt/ucinn_ascendv2__Gift_Processing_Barcode_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For enabling barcode scanner.</description>
    <label>Gift Processing Barcode Setting</label>
    <pluralLabel>Gift Processing Barcode Settings</pluralLabel>
</CustomObject>