force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Barcode_Setting__mdt/fields/ucinn_ascendv2__Delimiter__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Delimiter__c</fullName>
    <description>For separating IDs contained in the barcode.</description>
    <inlineHelpText>For separating IDs contained in the barcode.</inlineHelpText>
    <label>Delimiter</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>