force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Barcode_Setting__mdt/fields/ucinn_ascendv2__Enable_Barcode_Scanning__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Barcode_Scanning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For enabling the barcode scanner.</description>
    <inlineHelpText>For enabling the barcode scanner.</inlineHelpText>
    <label>Enable Barcode Scanning</label>
    <type>Checkbox</type>
</CustomField>