force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Barcode_Setting__mdt/fields/ucinn_ascendv2__Fields_To_Search_By_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_To_Search_By_Map__c</fullName>
    <description>Specify fields to search by other than ID when using barcode scanner separated by newline. For the following would allow searches on the donor ID on contact and the motivation code on appeal.

ucinn_ascendv2__Donor_ID__c, Contact
ucinn_ascendv2__Motivation_Code__c, Campaign</description>
    <inlineHelpText>Specify fields to search by other than ID when using barcode scanner separated by newline.</inlineHelpText>
    <label>Fields To Search By Map</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>